header overflow fixed

--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ a:hover {
   }
 
   .parallax1__header {
+    /* box-sizing: border-box; */
+
       position: relative;
       display: -webkit-box;
       display: -ms-flexbox;
@@ -73,9 +75,6 @@ a:hover {
 
     .parallax__header__h1 {
         position: relative;
-        max-width: -webkit-fit-content;
-        max-width: -moz-fit-content;
-        max-width: fit-content;
         margin: 0;
       color: rgb(255, 255, 205);
       -webkit-transition: color .4s ease;
@@ -89,7 +88,7 @@ a:hover {
     }
 
       .parallax__header__h1 span {
-        margin: -5px;
+        /* margin: -5px; */
         position: relative; /* needed for z-index to work */
       }
 
